# 15_kkmeans

./: .travis.yml  CMakeLists.txt  kkmeans_ex.txt  main.cpp  numbers_generator.py  points.h  readme.md
